# CPP-SmartCalc

src/: CMakeLists.txt  Doxyfile  MAIN_PAGE.md  Makefile  main.cc  tests.cc
src/controllers_and_view/: controller.cc  controller.h  creditcalc.cc  creditcalc.h  creditcalcview.ui  debitcalc.cc  debitcalc.h  debitcalcview.ui  graphplot.cc  graphplot.h  graphplot.ui  view.ui
src/icon/: icon.qrc
src/models/: creditdata.cc  creditdata.h  debitdata.cc  debitdata.h  model.cc  model.h
